--- a/css/kingster-style-custom.css
+++ b/css/kingster-style-custom.css
@@ -3,10 +3,10 @@
 }
 
 .kingster-page-title-wrap {
-	background-image: url(/img/Programs/Slider-14.png);
+	background-image: url(../img/Programs/Slider-14.png);
 }
 .kingster-page-title-wrap2 {
-	background-image: url(/img/Gallery/Slider-15.png);
+	background-image: url(../img/Gallery/Slider-15.png);
 	height: 400px;
 	background-repeat: no-repeat;
 	background-size: cover;
