--- a/css/kingster-style-custom.css
+++ b/css/kingster-style-custom.css
@@ -5296,7 +5296,11 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 }
 
 .values2 {
-	margin: 250px 0px 0px 50px;
+	margin: 160px 0px 0px 50px;
+}
+
+.values3 {
+	margin: 85px 0px 0px 50px;
 }
 
 /* about end  */
