--- a/css/kingster-style-custom.css
+++ b/css/kingster-style-custom.css
@@ -10,6 +10,7 @@
 	height: 400px;
 	background-repeat: no-repeat;
 	background-size: cover;
+	color: #ffffff;
 }
 
 .kingster-header-wrap.kingster-header-style-plain {
