--- a/css/style-core.css
+++ b/css/style-core.css
@@ -1396,6 +1396,10 @@ input[type="reset"]:focus {
 
 /* Start Arabic CSS */
 
+.logo-ar{
+	float: right !important;
+}
+
 .ar-font {
 	font-family: 'GE SS Two' !important;
 	font-weight: 100 !important;
@@ -1410,6 +1414,7 @@ input[type="reset"]:focus {
 .ar-float {
 	float: right !important;
 	text-align: right !important;
+	direction: rtl;
 }
 
 .ar-space {
@@ -1512,6 +1517,101 @@ input[type="reset"]:focus {
 	transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
 	transform-origin: 50% 50% 0px;
 	top: -45px;
+}
+
+.scholar-ar {
+	font-size: 55px !important;
+	font-weight: 500 !important;
+	letter-spacing: 0px;
+	font-family: 'GE SS Two' !important;
+	color: var(--orange) !important;
+	background-color: white;
+	padding: 20px 40px 20px 40px;
+	width: fit-content;
+}
+
+.collab-ar {
+	font-size: 55px !important;
+	font-weight: 500;
+	font-family: "GE SS Two";
+	letter-spacing: 0px;
+	text-transform: uppercase;
+	color: var(--orange) !important;
+	background-color: white;
+	padding: 20px 40px 20px 40px;
+}
+
+.collab-ar2 {
+	font-size: 35px !important;
+	font-weight: 500;
+	font-style: normal !important;
+	font-family: "GE SS Two" !important;
+	color: #f2f2f2 !important;
+	margin-top: 25px !important;
+	direction: rtl;
+}
+
+.collab-ar3 {
+	font-size: 1.6rem !important;
+	font-family: "GE SS Two";
+}
+
+.sis-co-ar {
+	font-size: 50px !important;
+	font-weight: 00 !important;
+	font-family: "GE SS Two" !important;
+	color: var(--orange) !important;
+	padding: 0px 40px 60px 40px;
+}
+
+.cont-ar {
+	font-size: 55px !important;
+	font-family: "GE SS Two";
+	font-weight: 300;
+	letter-spacing: 0px;
+	text-transform: uppercase;
+	color: var(--orange) !important;
+	background-color: white;
+	padding: 20px 40px 20px 40px;
+	direction: rtl;
+}
+
+.cont-ar2 {
+	font-size: 45px !important;
+	font-family: 'GE SS Two' !important;
+	font-style: normal !important;
+	color: #f2f2f2 !important;
+	margin-top: 25px !important;
+	direction: rtl;
+}
+
+.cont-ar3 {
+	font-size: 40px !important;
+	font-weight: 500 !important;
+	font-family: "GE SS Two" !important;
+	direction: rtl;
+}
+
+.cont-ar4 {
+	font-size: 20px !important;
+	font-family: "GE SS Two" !important;
+	font-style: normal !important;
+	direction: rtl;
+}
+
+.form-ar{
+	font-family: "GE SS Two";
+	font-weight: 100;
+	font-size: 20px !important;
+}
+.form-ar2{
+	font-family: "GE SS Two";
+	font-weight: 100;
+	font-size: 22px !important;
+}
+
+.section-color{
+	background-color: #f3f3f3 !important;
 }
 
 /* End Arabic CSS */
