--- a/plugins/goodlayers-core/include/css/page-builder.css
+++ b/plugins/goodlayers-core/include/css/page-builder.css
@@ -10,7 +10,7 @@
     margin-top: 0px;
     margin-bottom: 20px;
     font-size: 1.1rem;
-    text-align: justify;
+    text-align: left;
 }
 
 .gdlr-core-page-builder-body .gdlr-core-no-p-space p {
