--- a/plugins/goodlayers-core/include/css/page-builder.css
+++ b/plugins/goodlayers-core/include/css/page-builder.css
@@ -13,6 +13,15 @@
     text-align: left;
 }
 
+.tiktok{
+	fill: #EB8223;
+	margin-top: -6px !important;
+}
+
+.tiktok:hover{
+	fill: white;
+}
+
 .gdlr-core-page-builder-body .gdlr-core-no-p-space p {
 	margin-bottom: 0px;
 }
