--- a/css/kingster-style-custom.css
+++ b/css/kingster-style-custom.css
@@ -5199,15 +5199,14 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 }
 
 .overlay3 {
-	/* Set the overlay properties */
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	backdrop-filter: brightness(0.15) contrast(0.85);
-	/* opacity: 0.9; */
-	/* Adjust the opacity as needed */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    -webkit-backdrop-filter: brightness(0.15) contrast(0.85);
+    backdrop-filter: brightness(0.15) contrast(0.85);
+    /* opacity: 0.9; */
 }
 
 .p-width {
