--- a/css/kingster-style-custom.css
+++ b/css/kingster-style-custom.css
@@ -5,6 +5,7 @@
 .kingster-page-title-wrap {
 	background-image: url(../img/Programs/Slider-14.png);
 }
+
 .kingster-page-title-wrap2 {
 	background-image: url(../img/Gallery/Slider-15.png);
 	height: 400px;
@@ -259,8 +260,8 @@ textarea {
 }
 
 .gdlr-core-title-item.gdlr-core-left-align .gdlr-core-title-item-title {
-    float: left;
-    font-family: 'ITC Avant Garde Gothic';
+	float: left;
+	font-family: 'ITC Avant Garde Gothic';
 }
 
 .gdlr-core-title-item.gdlr-core-left-align .gdlr-core-title-item-divider {
@@ -5027,7 +5028,7 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 #div_983a_302 {
 	background-image: url(../img/B34A0461.jpg);
 	background-size: cover;
-    background-position: center center;
+	background-position: center center;
 	background-repeat: no-repeat;
 }
 
@@ -5199,19 +5200,19 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 }
 
 .overlay3 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    -webkit-backdrop-filter: brightness(0.15) contrast(0.85);
-    backdrop-filter: brightness(0.15) contrast(0.85);
-    /* opacity: 0.9; */
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	-webkit-backdrop-filter: brightness(0.15) contrast(0.85);
+	backdrop-filter: brightness(0.15) contrast(0.85);
+	/* opacity: 0.9; */
 }
 
 .p-width {
-    width: 90%;
-    text-align: justify;
+	width: 90%;
+	text-align: justify;
 }
 
 .insta-icon {
@@ -5250,9 +5251,11 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 	color: #000;
 	text-align: center !important;
 }
+
 .p-about4 {
 	color: #000;
 }
+
 .p-about5 {
 	color: #686868;
 }
@@ -5309,7 +5312,7 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 }
 
 .values4 {
-    margin: 95px 0px 0px 50px;
+	margin: 95px 0px 0px 50px;
 }
 
 /* about end  */
@@ -5679,3 +5682,8 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 }
 
 /* whatsapp arabic icon end */
+
+/* arabic css  */
+.warsha-h3{
+	margin-left: 51.8%;
+}
